--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,12 @@ dependencies {
     //Dependência Material Design
     implementation 'com.google.android.material:material:1.2.1'
 
+    //Dependência RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    //Dependência Fragment ktx
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
+    //Dependência Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 }
