--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,11 @@ dependencies {
 
     //Dependência Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    //Dependência Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Dependência Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
