--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.desafiofirebase">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DesafioFirebase">
-        <activity android:name=".ui.DetailsGameActivity"/>
+        <activity
+            android:name=".ui.DetailsGameActivity"
+            android:parentActivityName=".ui.home.HomeActivity" />
         <activity android:name=".ui.RegisterGameActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ui.RegisterActivity" />
