--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DesafioFirebase">
+
         <activity
-            android:name=".ui.DetailsGameActivity"
-            android:parentActivityName=".ui.home.HomeActivity" />
-        <activity android:name=".ui.RegisterGameActivity" />
-        <activity android:name=".ui.home.HomeActivity" />
-        <activity android:name=".ui.RegisterActivity" />
-        <activity android:name=".ui.SplashActivity">
+            android:name=".ui.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.LoginActivity" />
+
+        <activity
+            android:name=".ui.LoginActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".ui.RegisterGameActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".ui.DetailsGameActivity"
+            android:parentActivityName=".ui.home.HomeActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
